gateway-api/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cluster-gw
  namespace: gateways
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 1080
    name: web-ls
    allowedRoutes:
      namespaces:
        from: All
  - protocol: TLS
    port: 1443
    name: web-ls-tls
    tls:
      mode: Passthrough
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: v1
kind: Endpoints
metadata:
  name: cluster-gw-lb
  namespace: gateways
subsets:
  - addresses:
      - ip: 10.0.1.100  
      - ip: 10.0.2.100  
    ports:
      - port: 1443
        protocol: TCP
      - port: 1080
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: cluster-gw-lb
  namespace: gateways
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - port: 443
    protocol: TCP
    targetPort: 1443
  - port: 80
    protocol: TCP
    targetPort: 1080
  selector: {}
